--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.13.1",
-    "react-native": "0.63.1",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/google-signin": "^4.0.3",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.2.0",
     "@react-native-firebase/auth": "^8.2.0",
     "@react-native-firebase/firestore": "^7.4.3",
-    "newsapi": "^2.4.0",
+    "react": "16.13.1",
+    "react-native": "0.63.1",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-redash": "^14.2.3",
+    "react-native-safe-area-context": "^3.1.1",
+    "react-native-screens": "^2.9.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-webview": "^10.3.2",
+    "react-navigation": "^4.4.0",
+    "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
   },
